[package]
name = "simple-eq"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Vieira <pedro.vieira@eigenblue.ai>"]
homepage = ""

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
